--- a/control
+++ b/control
@@ -1,9 +1,9 @@
 Package: com.captinc.wallpaperchanger
 Name: WallpaperChanger
-Version: 1.0
+Version: 1.0.1
 Depends: firmware (>=11.0)
-Author: Capt Inc
-Maintainer: Capt Inc
+Author: Capt Inc <teamcaptinc@gmail.com>
+Maintainer: Capt Inc <teamcaptinc@gmail.com>
 Section: Tweaks
 Architecture: iphoneos-arm
 Description: Change wallpaper from command line
